# Bell_EBM

./: .gitignore  .readthedocs.yaml  Bell_EBM.ipynb  Bell_EBM.py  Bell_EBM_NN.ipynb  Bell_EBM_Testing.ipynb  Bell_EBM_Tutorial.html  Bell_EBM_Tutorial.ipynb  H2_Dissociation_Routines.py  KeplerOrbit.py  Map.py  Planet.py  README.md  Star.py  StarPlanetSystem.py  pyproject.toml  setup.cfg  setup.py
Bell_EBM/: H2_Dissociation_Routines.py  KeplerOrbit.py  Map.py  Planet.py  Star.py  StarPlanetSystem.py  __init__.py  pretty_plotting.py
docs/: Bell_EBM.rst  Makefile  conf.py  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: Bell_EBM.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/doctrees/api/: Bell_EBM.doctree  modules.doctree
docs/_build/html/: .buildinfo  Bell_EBM.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/Bell_EBM/: H2_Dissociation_Routines.html  KeplerOrbit.html  Map.html  Planet.html  Star.html  StarPlanetSystem.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/api/: Bell_EBM.html  modules.html
docs/source/: Bell_EBM_Tutorial.html  LICENSE  LICENSE.html  conf.py  index.rst
