[metadata]
name = Bell_EBM
author = Taylor James Bell
author_email = taylor.bell@mail.mcgill.ca
description = An object-oriented Energy Balance Model that can be used to model exoplanet observations.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = [LICENSE,]
url = https://github.com/taylorbell57/Bell_EBM
project_urls =
    Bug Tracker = https://github.com/taylorbell57/Bell_EBM/issues
    Source Code = https://github.com/taylorbell57/Bell_EBM
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
python_requires= >=3
install_requires =
    numpy
    scipy
    astropy
    matplotlib

[options.extras_require]
jupyter =
    jupyter
    ipykernel
docs =
    myst-parser
    nbsphinx
    numpydoc
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
